Closed
Bug 1184533
Opened 8 years ago
Closed 8 years ago
[IMM] ASSERTION: offset is less than cursorPosition!: 'offset >= cursorPosition'
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla42
Tracking | Status | |
---|---|---|
firefox42 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
References
Details
(Keywords: inputmethod)
Attachments
(1 file, 2 obsolete files)
When I type first character in empty editor in IMM mode, I see this assertion: ASSERTION: offset is less than cursorPosition!: 'offset >= cursorPosition' Looks like that this assertion and following code ensure that the offset is in composition string. However, this must be a simple mistake.
Assignee | ||
Comment 1•8 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=0303b7edac02
Assignee | ||
Comment 2•8 years ago
|
||
Assignee | ||
Comment 3•8 years ago
|
||
Comment on attachment 8635107 [details] [diff] [review] Rewrite range check in aOffset of nsIMM32Handler::GetCharacterRectOfSelectedTextAt() Let's check if the querying offset is in composition string or selected string with clearer code. We can return any character's rect (without e10s), the caller (or active IME) must be buggy if the offset is out of the composition/selected string.
Attachment #8635107 -
Flags: review?(VYV03354)
Assignee | ||
Comment 4•8 years ago
|
||
Comment on attachment 8635107 [details] [diff] [review] Rewrite range check in aOffset of nsIMM32Handler::GetCharacterRectOfSelectedTextAt() Oops, I realized that this could be simpler. if aOffset is 0, we don't need complicated check.
Attachment #8635107 -
Flags: review?(VYV03354) → review-
Assignee | ||
Comment 5•8 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=a411a9604a35
Assignee | ||
Comment 6•8 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=ea0dc2815cc9
Assignee | ||
Comment 7•8 years ago
|
||
When there is a composition, normal selection is the caret in the composition string. So, the method's base offset should be computed with mIsComposing. If the selected length (or composition string when mIsComposing == true) is collapsed and the offset is same as the caret offset, we should return caret rect. Otherwise, the character rect at the offset.
Attachment #8635107 -
Attachment is obsolete: true
Attachment #8635710 -
Flags: review?(VYV03354)
Assignee | ||
Comment 8•8 years ago
|
||
Merged with the latest m-c.
Attachment #8635710 -
Attachment is obsolete: true
Attachment #8635710 -
Flags: review?(VYV03354)
Attachment #8638406 -
Flags: review?(VYV03354)
Updated•8 years ago
|
Attachment #8638406 -
Flags: review?(VYV03354) → review+
Assignee | ||
Comment 9•8 years ago
|
||
url: https://hg.mozilla.org/integration/mozilla-inbound/rev/e7549c25cfcd77273abd493fa923183367fbfc40 changeset: e7549c25cfcd77273abd493fa923183367fbfc40 user: Masayuki Nakano <masayuki@d-toybox.com> date: Sun Jul 26 12:29:47 2015 +0900 description: Bug 1184533 Rewrite range check in aOffset of nsIMM32Handler::GetCharacterRectOfSelectedTextAt() r=emk
Comment 10•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/e7549c25cfcd
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in
before you can comment on or make changes to this bug.
Description
•